--- a/aboutMeStyle.css
+++ b/aboutMeStyle.css
@@ -1,5 +1,11 @@
 body {
-  background-color: 006400
+  background-color: rgba(0, 89, 0, 0.5)
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h1 {
