--- a/aboutMeStyle.css
+++ b/aboutMeStyle.css
@@ -1,1 +1,14 @@
+body {
+  background-color: rgba(0, 90, 0, 0.5);
+}
 
+h1 {
+  text-align: center;
+  font-size: 600%;
+  color: green;
+  font-family: courier;
+}
+
+p {
+  font-family: georgia;
+}
