--- a/aboutMeStyle.css
+++ b/aboutMeStyle.css
@@ -5,10 +5,19 @@ body {
 h1 {
   text-align: center;
   font-size: 600%;
-  color: green;
+  font-weight: bold;
   font-family: courier;
 }
 
 p {
+  color: green;
   font-family: georgia;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  height: 50%;
 }
