--- a/aboutMeStyle.css
+++ b/aboutMeStyle.css
@@ -12,6 +12,7 @@ h1 {
 h3 {
   font-family:courier;
   font-size: 115%;
+  font-weight: bold;
 }
 
 p {
@@ -58,9 +59,11 @@ img {
 
 ul {
   list-style-type: square;
+  color: green;
 }
 
 table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
+  color: green;
 }
